fixed surefire plugin settings for bamboo