@@ -55,6 +55,19 @@
  		-->
 	</properties>
 
+	<build>
+		<plugins>	
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <version>2.7.2</version>
+		    <configuration>
+		        <forkMode>never</forkMode>
+		        <argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=2048m</argLine>
+		    </configuration>
+		</plugin>
+		</plugins>
+	</build>
 
 	<modules>
 		<module>awtt-server</module>
